fixed align wide and full size issues in editor

--- a/theme/scss/site/editor.scss
+++ b/theme/scss/site/editor.scss
@@ -4,8 +4,8 @@
 
 .editor-styles-wrapper {
 	.alignwide {
-		max-width: 100% !important;
-		position: initial !important;
+		right: 0;
+		width: 100%;
 	}
 	.alignfull {
 		width: 100% !important;
